[project]
name = "travelplannerapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-core>=1.4.0",
    "langchain-groq>=1.1.2",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "tavily-python>=0.7.24",
]
